Inject WearPairingManager in PhysicalDeviceTable
Fixes PhysicalDeviceTableTest and some other touched tests.

Bug: 263164912
Test: these tests
Change-Id: Id354310fbcfbe5bcca837b8f7abd5c6485af7644

GitOrigin-RevId: ab1681e2f8a51fbe8d03b6cdea88bb77d4c7bd79